# tree-sitter-ccs

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  copy-to-nvim.sh  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-ccs.pc.in
bindings/c/tree_sitter/: tree-sitter-ccs.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ccs/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterCcsTests/: TreeSitterCcsTests.swift
queries/: context.scm  highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: semicolon.txt  strings.txt
