[package]
name = "tree-sitter-ccs"
description = "CCS is a language for config files, and libraries to read those files and configure applications."
version = "0.1.0"
authors = ["Jacob Rice <jrice@drwholdings.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ccs"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/drwjrice/tree-sitter-ccs"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.4"
